2007-03-30  Jim Evins  <evins@snaught.com>

	* src/prefs-model.c: (gl_prefs_model_load_settings):
		Default to an unlimited list of recent documents, since this parameter
		seems to be pre-filter anyway.

2007-03-30  Jim Evins  <evins@snaught.com>

	* src/label-box.c: (draw_shadow):
	* src/label-ellipse.c: (draw_shadow):
		Added missing shadow fill.
	
2007-03-28  Jim Evins  <evins@snaught.com>

	* src/ui-commands.c: (gl_ui_cmd_file_print):
		Unreferencing the print operation sometimes crashes.  Just don't do it
		right now.

2007-03-28  Jim Evins  <evins@snaught.com>

	* src/print-op.c: (gl_print_op_construct),
	(gl_print_op_get_settings), (gl_print_op_set_settings),
	(gl_print_op_free_settings), (create_custom_widget_cb):
	* src/print-op.h:
	* src/ui-commands.c: (gl_ui_cmd_file_print):
	* src/window.c: (gl_window_init):
	* src/window.h:
		Save print settings and custom settings between print operations
		on the same window.

2007-03-24  Jim Evins  <evins@snaught.com>

	* src/object-editor-image-page.c:
	(gl_object_editor_prepare_image_page),
	(gl_object_editor_set_image), (img_selection_changed_cb):
		Workaround for GtkFileChooserButton bug # 327243.  This the root
		cause for gLabels bug # 1192884.  I have actually observed 3 delayed
		"selection-changed" signals -- the first 2 return NULL -- this is
		what caused the image to reset to the default followed by setting
		it back to the original image, trying to fit it into a new bounding
		box.  This sequence of events is much more evident with the new
		cairo rendering.

2007-03-23  Jim Evins  <evins@snaught.com>

	Merged all changes from experimental cairo branch to trunk.
	Trunk no longer depends on libgnomecanvas or libgnomeprint[ui].

2007-03-23  Jim Evins  <evins@snaught.com>

	* src/label-object.h:
	* src/label-object.c: (gl_label_object_class_init),
	(gl_label_object_get_raw_size), (gl_label_object_get_size):
		Created "get_raw_size" method.
	* src/label-barcode.c: (get_size):